# btt-tft-postprocess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build_exe.bat  pyproject.toml
.github/workflows/: build-release.yml
docs/: slicer-setup.md
src/: btt_postprocess.py
tests/: test_btt_postprocess.py
