[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "btt-postprocess"
version = "0.2.5"
description = "Orca/PrusaSlicer post-processing script for BIGTREETECH TFT screens"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["Pillow"]

[project.scripts]
btt-postprocess = "btt_postprocess:cli"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["btt_postprocess"]

[tool.pytest.ini_options]
pythonpath = ["src"]
